Fix comment in Directory.Build.props

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,7 +16,7 @@
         <CheckEolTargetFramework>false</CheckEolTargetFramework>
     </PropertyGroup>
 
-    <!-- AspectInjector is explicitly enabled for projects with aspects/injections -->
+    <!-- AspectInjector should be explicitly enabled for projects with aspects/injections -->
     <PropertyGroup>
         <AspectInjector_Enabled>false</AspectInjector_Enabled>
     </PropertyGroup>
