--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,21 +14,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.5.3
+      - uses: actions/checkout@v4
 
       - name: 'Setup .NET Core SDK'
-        uses: actions/setup-dotnet@v3.2.0
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
             3.1.x
             6.0.x
-            7.0.x
 
       - name: 'Restore packages'
-        run: dotnet restore ${{ env.SOLUTION_PATH }} --packages ${{ env.RESTORE_OUTPUT_PATH }}
+        run: |
+          dotnet restore ${{ env.SOLUTION_PATH }}\
+            --packages ${{ env.RESTORE_OUTPUT_PATH }}
 
       - name: 'Build project using dotnet'
-        run: dotnet build ${{ env.SOLUTION_PATH }} --no-restore --configuration ${{ env.BUILD_CONFIGURATION }} -p:ContinuousIntegrationBuild=true
+        run: |
+          dotnet build ${{ env.SOLUTION_PATH }}\
+            --no-restore\
+            --configuration ${{ env.BUILD_CONFIGURATION }}\
+            -p:ContinuousIntegrationBuild=true
 
         # Lower AspectInjector requirement for users of the packages to workaround #391 (build crash on macOS arm machines)
       - name: Reduce AspectInjector requirement to 2.8.1
@@ -37,10 +42,17 @@ jobs:
             dotnet add Allure.XUnit package AspectInjector --version 2.8.1
 
       - name: 'Pack project'
-        run: dotnet pack ${{ env.SOLUTION_PATH }} --no-restore --no-build --configuration ${{ env.BUILD_CONFIGURATION }} -p:PackageOutputPath=${{ env.PACKAGE_OUTPUT_PATH }}
+        run: |
+          dotnet pack ${{ env.SOLUTION_PATH }}\
+            --no-restore\
+            --no-build\
+            --configuration ${{ env.BUILD_CONFIGURATION }}\
+            -p:PackageOutputPath=${{ env.PACKAGE_OUTPUT_PATH }}
 
       - name: 'NuGet publish'
         run: |
-          dotnet nuget push "*/${{ env.PACKAGE_OUTPUT_PATH }}/*.nupkg" -k ${NUGET_TOKEN} -s https://api.nuget.org/v3/index.json
+          dotnet nuget push "*/${{ env.PACKAGE_OUTPUT_PATH }}/*.nupkg"\
+            -k ${NUGET_TOKEN}\
+            -s https://api.nuget.org/v3/index.json
         env:
           NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
