--- a/nuget.config
+++ b/nuget.config
@@ -1,8 +1,7 @@
-﻿<configuration>
-  <config>
-    <add key="globalPackagesFolder" value="packages" />
-  </config>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
   <packageSources>
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <clear/>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
