--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,6 @@ name: Publish
 env:
   SOLUTION_PATH: allure-csharp.sln
   BUILD_CONFIGURATION: 'Publish'
-  RESTORE_OUTPUT_PATH: 'packages'
   PACKAGE_OUTPUT_PATH: 'artifacts'
 
 on:
@@ -25,8 +24,7 @@ jobs:
 
       - name: 'Restore packages'
         run: |
-          dotnet restore ${{ env.SOLUTION_PATH }}\
-            --packages ${{ env.RESTORE_OUTPUT_PATH }}
+          dotnet restore ${{ env.SOLUTION_PATH }}
 
       - name: 'Build project using dotnet'
         run: |
@@ -35,7 +33,8 @@ jobs:
             --configuration ${{ env.BUILD_CONFIGURATION }}\
             -p:ContinuousIntegrationBuild=true
 
-        # Lower AspectInjector requirement for users of the packages to workaround #391 (build crash on macOS arm machines)
+        # Lower AspectInjector requirement for users of the packages to
+        # workaround #391 (build crash on macOS arm machines)
       - name: Reduce AspectInjector requirement to 2.8.1
         run: |
             dotnet add Allure.Net.Commons package AspectInjector --version 2.8.1
@@ -47,11 +46,11 @@ jobs:
             --no-restore\
             --no-build\
             --configuration ${{ env.BUILD_CONFIGURATION }}\
-            -p:PackageOutputPath=${{ env.PACKAGE_OUTPUT_PATH }}
+            "-p:PackageOutputPath=${{ github.workspace }}/${{ env.PACKAGE_OUTPUT_PATH }}"
 
       - name: 'NuGet publish'
         run: |
-          dotnet nuget push "*/${{ env.PACKAGE_OUTPUT_PATH }}/*.nupkg"\
+          dotnet nuget push "${{ env.PACKAGE_OUTPUT_PATH }}/*.nupkg"\
             -k ${NUGET_TOKEN}\
             -s https://api.nuget.org/v3/index.json
         env:
