--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,20 +33,17 @@ jobs:
             --configuration ${{ env.BUILD_CONFIGURATION }}\
             -p:ContinuousIntegrationBuild=true
 
-        # Lower AspectInjector requirement for users of the packages to
-        # workaround #391 (build crash on macOS arm machines)
-      - name: Reduce AspectInjector requirement to 2.8.1
-        run: |
-            dotnet add Allure.Net.Commons package AspectInjector --version 2.8.1
-            dotnet add Allure.XUnit package AspectInjector --version 2.8.1
-
+      # Use AspectInjector 2.8.2 which, unlike 2.8.1, correctly sets PdbChecksum
+      # The only reason we're' still referencing 2.8.1 from projects is that
+      # 2.8.2 doesn't work well on Mac OS ARM
       - name: 'Pack project'
         run: |
           dotnet pack ${{ env.SOLUTION_PATH }}\
             --no-restore\
             --no-build\
             --configuration ${{ env.BUILD_CONFIGURATION }}\
-            "-p:PackageOutputPath=${{ github.workspace }}/${{ env.PACKAGE_OUTPUT_PATH }}"
+            "-p:PackageOutputPath=${{ github.workspace }}/${{ env.PACKAGE_OUTPUT_PATH }}"\
+            "-p:AspectInjector_Location=${{ github.workspace }}/build/AspectInjector/linux-x64"
 
       - name: 'NuGet publish'
         run: |
