--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -26,7 +26,7 @@
   - changed-files:
     - any-glob-to-any-file:
       - "Allure.NUnit/**"
-      - "Allure.NUnit.Tests/**"
+      - "Allure.NUnit.Examples/**"
 
 "theme:specflow":
   - changed-files:
