Repository-level changes, dependency updates and typo fixes (#458)
* Factor out and fix LICENSE for all packages

* Factor out and fix packages' metadata

* Add root files to the solution

* Update issue/PR templates

* Align .net to 6.0 for test projs. Bump & fix deps

* Fix README and typos in doc comments

* Update links to release notes at release

* Add a schema link in commons

* Update workflow actions for build/release/publish

* Update labeler to v5

The trigger was temporarily changed to pull_request as described here:
https://github.com/actions/labeler?tab=readme-ov-file#notes-regarding-pull_request_target-event

* Remove stale files from the repo

  - .gitattributes - not used, contains comments only
  - leftover projects:
    - Allure.Commons.NetCore.Nuget.Tests
    - Allure.SpecFlow.MSTest
    - Allure.SpecflowPlugin.Nuget.Tests
  - leftover solutions:
    - Allure.Commons.sln
    - Allure.Specflow.sln
    - Nuget.Tests.sln

* Update nuget.config according to best practices

* Replace stale configurations with Publish

The Publish configuration includes all packages intended to go to
nuget.org in Release mode.

* Use the default directory to restore packages in CI

* Reduce the AspectInjector reference to 2.8.1 (#401)

We now include AspectInjector CLI 2.8.2 directly in the repo and
use it to build the packages while keeping the reference to 2.8.1.
Those particular versions are compatible.  That allow as to have
debug symbols included as well as to support Mac OS Arm users.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,6 @@ name: Build
 env:
   SOLUTION_PATH: allure-csharp.sln
   BUILD_CONFIGURATION: 'Release'
-  RESTORE_OUTPUT_PATH: 'packages'
   PACKAGE_OUTPUT_PATH: 'artifacts'
 
 on:
@@ -16,28 +15,35 @@ on:
       - 'main'
       - 'hotfix-*'
 
-jobs: 
+jobs:
   build:
     name: "Build"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.5.3
-        
+      - uses: actions/checkout@v4
+
       - name: 'Setup .NET Core SDK'
-        uses: actions/setup-dotnet@v3.2.0
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
             3.1.x
             6.0.x
-            7.0.x
-      
+
       - name: 'Restore packages'
-        run: dotnet restore ${{ env.SOLUTION_PATH }} --packages ${{ env.RESTORE_OUTPUT_PATH }}
-        
+        run: |
+          dotnet restore ${{ env.SOLUTION_PATH }}
+
       - name: 'Build project using dotnet'
-        run: dotnet build ${{ env.SOLUTION_PATH }} --no-restore --configuration ${{ env.BUILD_CONFIGURATION }}
-        
+        run: |
+          dotnet build ${{ env.SOLUTION_PATH }}\
+            --no-restore\
+            --configuration ${{ env.BUILD_CONFIGURATION }}
+
       - name: 'Run tests'
         run: |
-          dotnet test Allure.Net.Commons.Tests/Allure.Net.Commons.Tests.csproj --no-build --configuration ${{ env.BUILD_CONFIGURATION }}
-          dotnet test Allure.SpecFlowPlugin.Tests/Allure.SpecFlowPlugin.Tests.csproj --no-build --configuration ${{ env.BUILD_CONFIGURATION }}
+          dotnet test Allure.Net.Commons.Tests/Allure.Net.Commons.Tests.csproj\
+            --no-build\
+            --configuration ${{ env.BUILD_CONFIGURATION }}
+          dotnet test Allure.SpecFlowPlugin.Tests/Allure.SpecFlowPlugin.Tests.csproj\
+            --no-build\
+            --configuration ${{ env.BUILD_CONFIGURATION }}
